[metadata]
name = dapiclient
version = 0.0.2
author = mayoreee
description = A python client SDK for DASH Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mayoreee/dapi-client-py
project_urls =
    Source Code = https://github.com/mayoreee/dapi-client-py
    Bug Tracker = https://github.com/mayoreee/dapi-client-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
        base58 >= '2.1.0'
        cbor2 >= '5.4.0'
        certifi >= '2021.5.30'
        charset-normalizer >= '2.0.3'
        grpcio >= '1.38.1'
        idna >= '3.2'
        protobuf >= '3.17.3'
        requests >= '2.26.0'
        six >= '1.16.0'
        urllib3 >= '1.26.6'
packages = find_namespace:
[options.packages.find]
exclude = 
        tests*
